--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "php": "^7.2.5|^8.2",
         "guzzlehttp/guzzle": "^7.8.1",
         "laravel/framework": "^10.0",
-        "laravel/legacy-factories": "^1.3",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^4.0",
         "tightenco/ziggy": "^2.2"
@@ -37,12 +36,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
