--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "squizlabs/php_codesniffer": "^3.9"
     },
     "config": {
         "optimize-autoloader": true,
@@ -58,6 +59,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "pint": "./vendor/bin/pint",
+        "lint": "./vendor/bin/phpcbf --standard=PSR12 ./app",
+        "lint_check": "./vendor/bin/phpcs"
     }
 }
